// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonsSection should match the snapshot 1`] = `
<div
  class="buttons-calculator"
>
  <button
    class="button"
    type="button"
  >
    AC
  </button>
  <button
    class="button"
    type="button"
  >
    +/-
  </button>
  <button
    class="button"
    type="button"
  >
    %
  </button>
  <button
    class="button button-orange"
    type="button"
  >
    ÷
  </button>
  <button
    class="button"
    type="button"
  >
    7
  </button>
  <button
    class="button"
    type="button"
  >
    8
  </button>
  <button
    class="button"
    type="button"
  >
    9
  </button>
  <button
    class="button button-orange"
    type="button"
  >
    x
  </button>
  <button
    class="button"
    type="button"
  >
    4
  </button>
  <button
    class="button"
    type="button"
  >
    5
  </button>
  <button
    class="button"
    type="button"
  >
    6
  </button>
  <button
    class="button button-orange"
    type="button"
  >
    -
  </button>
  <button
    class="button"
    type="button"
  >
    1
  </button>
  <button
    class="button"
    type="button"
  >
    2
  </button>
  <button
    class="button"
    type="button"
  >
    3
  </button>
  <button
    class="button button-orange"
    type="button"
  >
    +
  </button>
  <button
    class="button"
    id="button-0"
    type="button"
  >
    0
  </button>
  <button
    class="button"
    type="button"
  >
    .
  </button>
  <button
    class="button button-orange"
    type="button"
  >
    =
  </button>
</div>
`;

exports[`Calculator should match the snapshot 1`] = `
<div
  class="calculator-section-container"
>
  <h2>
    Let's do some Math
  </h2>
  <div
    class="calculator-container"
  >
    <div
      class="div-result"
    >
      0
    </div>
    <div
      class="buttons-calculator"
    >
      <button
        class="button"
        type="button"
      >
        AC
      </button>
      <button
        class="button"
        type="button"
      >
        +/-
      </button>
      <button
        class="button"
        type="button"
      >
        %
      </button>
      <button
        class="button button-orange"
        type="button"
      >
        ÷
      </button>
      <button
        class="button"
        type="button"
      >
        7
      </button>
      <button
        class="button"
        type="button"
      >
        8
      </button>
      <button
        class="button"
        type="button"
      >
        9
      </button>
      <button
        class="button button-orange"
        type="button"
      >
        x
      </button>
      <button
        class="button"
        type="button"
      >
        4
      </button>
      <button
        class="button"
        type="button"
      >
        5
      </button>
      <button
        class="button"
        type="button"
      >
        6
      </button>
      <button
        class="button button-orange"
        type="button"
      >
        -
      </button>
      <button
        class="button"
        type="button"
      >
        1
      </button>
      <button
        class="button"
        type="button"
      >
        2
      </button>
      <button
        class="button"
        type="button"
      >
        3
      </button>
      <button
        class="button button-orange"
        type="button"
      >
        +
      </button>
      <button
        class="button"
        id="button-0"
        type="button"
      >
        0
      </button>
      <button
        class="button"
        type="button"
      >
        .
      </button>
      <button
        class="button button-orange"
        type="button"
      >
        =
      </button>
    </div>
  </div>
</div>
`;
